# calds-runtime

./: .gitignore  BOOTSTRAP.md  README.md  calds-eval-operator-guide-v1.md  calds-executive-brief-v1.md  calds-runtime-spine-v1.md  calds-strategy-decision-pack-v1.md  pyproject.toml
calds_runtime/: __init__.py  agents.py  case_compiler.py  case_workflow.py  cli.py  completeness.py  contracts.py  editorial_export.py  forensic_triage.py  generic_spine.py  investigation_profiles.py  plain_language.py  publication.py  quality_gates.py  review.py  risk_matrix.py  scoring.py  search.py  sentinel.py  source_catalog.py  truth.py  workflow.py
cases/: live_ca_homelessness_top15_case.json  live_ca_recovery_ngos_case.json
docs/: agent_architecture_audit_rebuild_prompt.md  agent_review_findings_2026_05_01.md  agent_review_prompt_suite.md  california_source_catalog.md  case_compiler_agent_prompt.md  completeness_controller_agent_prompt.md  dossier_viewer_visual_direction.md  generic_investigation_spine_prompt.md  generic_spine_depth_layer_prompt.md  homelessness_forensic_agent_prompts.md  methodology_integrity_audit.md  outcome_source_acquisition_master_prompt.md  private-internal-ai-business-plan-v1.md  private-internal-ai-one-pager-v1.md  prompt_logic_audit.md  public_case_publisher_prompt.md  publication_workflow.md  repo_layout.md  vercel_editorial_case_site_task_sheet.md
evals/: run_calds_eval.py
scripts/: build_editorial_routes.py  build_editorial_site.py  extract_live_source_tables.py  ingest_homelessness_top15_sources.py  ingest_live_recovery_sources.py  (+5 more)
site/: app.js  (+2 more)
(+57 files in other folders)
